--- a/.workflows/first.yml
+++ b/.workflows/first.yml
@@ -2,9 +2,9 @@ name: first
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   bash-example:
